fixed full width row groups being aligned to top

--- a/packages/ag-grid-community/src/styles/ag-grid.scss
+++ b/packages/ag-grid-community/src/styles/ag-grid.scss
@@ -581,6 +581,10 @@ ag-grid, ag-grid-angular, ag-grid-ng2, ag-grid-polymer, ag-grid-aurelia  {
     }
 }
 
+.ag-full-width-row.ag-row-group .ag-cell-wrapper {
+    align-items: center;
+}
+
 .ag-cell-with-height {
     height: 100%;
 }
